# all-the-demos

./: .gitignore  Makefile  README.md  main.cpp
BFE/: 2waybinding.js  Array.map.js  BetterChannel.js  CSSselector.js  DomHeight.js  JSON.stringify.js  Math.clz32.js  MyLRUStorage.js  Observabal.operators.js  Observable.fromEvent.js  Observable.subject.js  _.set.js  angle.js  bigint.js  bigint.signsubstract.js  bsearchdupe.js  calculate.js  chunk.js  circle.js  classnames.js  clearAllTimeout.js  cloneDeep.js  compare.js  compress.js  count.js  count1.js  countPalindromicSubstr.js  delegate.js  dev.ts  emit.js  equal.js  exclude.js  extend.js  fib.js  fibrecursion.js  frequentCharacter.js  grid.dense.ts  grid.sparse.ts  hex2rgb.js  highlight.js  (+48 more)
BFE/css/: 13.list.count.css  15.doughnut.css  17.box-decoration-break.css  18.gradient.text.css  24.fluid.font.css  3.max3lines.css  4.2column.css  5.modal.css  8.twitter.html  9.3columns.css
BFE/flightBooker/: package.json  pnpm-lock.yaml
BFE/grid.sparse/: grid.sparse.spec.js
BFE/js/: Array.reduce.js  Base64.js  JSONparse.js  JSONstringify.js  MyURLSearchParams.js  Object.is.js  addComma.js  atob.js  autorety.js  base64toA.js  bigDecimal.add.js  bigDecimal.dev.js  bigDecimal.mult.js  bigDecimal.sub.js  bigint.signaddition.js  bigint.substract.js  browserhistory.js  bsearch.js  btree.vtraversal.js  bubblesort.js  completeAssign.js  cookie.js  counter.js  createGetAPIWithMerging.js  deduplicate.js  divition.js  expect.js  extract.js  fakeTimer.js  fakeTimetInterval.js  fib.js  findMeetingSlots.js  findsingle.js  firstDuplicate.js  flutten.js  functionalComponent.js  get.js  getDomTags.js  getNthNum.js  grid.dense.spec.js  (+36 more)
BFE/jsquizz/: 10.equal.md  101.equal.js  109.isNaN.js  14.unary.md  (+51 more)
BFE/leptos-tutorial/: Cargo.toml
BFE/leptos-tutorial/src/: main.rs
BFE/leptos-tutorial/src/components/: App.rs
astro-test/: package-lock.json  package.json
astro-view-transition/: astro.config.mjs  package.json  tsconfig.json
babylon-demo/: index.html  package.json
babylon-ecs-blender/: package.json
babylon-editor/: index.html  package.json  tsconfig.json  workspace.editorworkspace
bevy-card-combinator/: Cargo.toml
bitecs-project/: package-lock.json  package.json
bluetooth/: package.json  pnpm-lock.yaml  vite.config.ts
cmake_examples/03-statics/: CMakeLists.txt
cmake_examples/03-statics/src/: Hello.cpp
cmake_examples/04-shared/: CMakeLists.txt
cmake_examples/04-shared/src/: Hello.cpp  main.cpp
cmake_examples/05-installing/: CMakeLists.txt
cmake_examples/05-installing/src/: Hello.cpp  main.cpp
cmake_examples/06-build-type/: CMakeLists.txt  main.cpp
cmake_examples/08-vendor/: CMakeLists.txt  main.cpp
cmake_examples/10-configure-file/: CMakeLists.txt  main.cpp  ver.h.in
cmake_examples/11-protobuf/: AddressBook.proto  CMakeLists.txt  main.cpp
cmake_examples/13-vendor-unit-test/: CMakeLists.txt  Palindrome.cpp  Reverse.h  unit_tests.cpp
cmake_examples/14-google-test/: CMakeLists.txt  unit_tests.cpp
crux/starter/: Cargo.toml
crux/starter/shared/: Cargo.toml  lib.rs
crux/starter/shared/src/: app.rs  capabilities.rs  event.rs  lib.rs  model.rs  shared.udl  vmodel.rs
crux/starter/shared_types/: Cargo.toml  build.rs
crux/usemoon/shared/: Cargo.toml
crux/usemoon/shared/src/: app.rs  lib.rs
dice/: index.html  package-lock.json  package.json
dice3/: package-lock.json  package.json
drizzle-demo/: Dockerfile  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
egui/: Cargo.toml
fyne/: go.mod
game/: Cargo.toml
go-fiber-demo/: Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
godot-sprite/: JIAN-GONG-vector-walking.png.import  export_presets.cfg  icon.svg.import  main.tscn  pink.gd  project.godot  sprite.gd
graphqlfunc/: project.yml
hexagon/: astro.config.mjs  package-lock.json  package.json
iced/: Cargo.toml
ladder/: package.json  pnpm-lock.yaml
langchain/: chatbot.js  classify.js  document.js  example.js  extraction.js  multiple.js  package-lock.json  package.json  pnpm-lock.yaml
ms-graph/: appSettings.ts  index.ts  package-lock.json  package.json
my-remix-app/: README.md  fly.toml  package.json
myorg/: nx.json  package.json
nextjs-blog/: package-lock.json
oneDrive/: deno.jsonc  main.ts
onedrive/: package.json  pnpm-lock.yaml
opengl/: CMakeLists.txt  conanfile.txt
opengl/src/: main.cpp
react-babylon-examples/: README.md  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
reactylon-app/: package-lock.json  package.json
remix-blog/: .gitignore  package-lock.json  package.json
rust-actix/: .env  .gitignore  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
structure/: CMakeLists.txt
structure/src/algorithm/01pack/: CMakeLists.txt  item.cpp  main.cpp  pack.cpp  packState.cpp
structure/src/algorithm/01pack/include/01pack/: item.h  pack.h  packState.h
structure/src/algorithm/01pack/test/: item.cc  pack.cc
structure/src/qt/: CMakeLists.txt  conanfile.txt  main.cpp  mainwindow.cpp  mainwindow.h
structure/src/wxwidget/01-helper/: CMakeLists.txt  main.cpp
structure/src/wxwidget/02-first/: CMakeLists.txt  Panels.cpp  button.cpp  communicate.cpp  icon.cpp  main.cpp  simple.cpp
structure/src/wxwidget/02-first/include/: button.h  communicate.h  icon.h  main.h  panels.h  simple.h
structure/src/wxwidget/05-events/: CMakeLists.txt  button.cxx  button.h  main.cxx
structure/src/wxwidget/06-dnd/: CMakeLists.txt  conanfile.txt  main.cxx  textdrop.cpp  textdrop.h  win32.cpp
svg-mesh/: index.html  package.json  tsconfig.json
swift/: Package.swift
systeminfo/: demo.ts  tempCodeRunnerFile.ts
tRPC/: package-lock.json  package.json  pnpm-lock.yaml  server.ts
tauri-app/: pnpm-lock.yaml
tensor/: package.json
three-fiber-examples/: package.json
tlu-academic-timetable/: crawler.py  urls.py
uikit/: package.json  tsconfig.json  vite.config.ts
unity-server/: index.html  index.jsx  package-lock.json  package.json  vite.config.js
waku-project/: package-lock.json
webxr-google/: index.html
(+595 files in other folders)
