[workspace]
members = ["shared"]
resolver = "1"

[workspace.package]
authors = ["gongbaodd"]
edition = "2021"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi", "wasm"]
rust-version = "1.66"

[workspace.dependencies]
anyhow = "1.0.79"
crux_core = "0.7"
serde = "1.0.196"