[package]
name = "shared"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.4.0"
uniffi = "0.26.1"
wasm-bindgen = "0.2.90"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.26.1", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.26.1", features = ["build"] }
